--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
-  background-color: #FFB6C1;
+  background-color: #FFC0CB;
   color: white;
   padding: 16px 20px;
   border: none;
   cursor: pointer;
   opacity: 0.8;
   position: fixed;
-  bottom: 23px;
-  right: 28px;
+  bottom: 540px;
+  right: 960px;
   width: 280px;
 }
 
