--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
-  background-color: #FFC0CB;
+  background-color: #FF0000;
   color: white;
   padding: 16px 20px;
   border: none;
   cursor: pointer;
   opacity: 0.8;
-  position: fixed;
+  position: relative;
   bottom: 540px;
   right: 960px;
   width: 280px;
