--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
   border: none;
   cursor: pointer;
   opacity: 0.8;
-  position: relative;
-  bottom: 23px;
+  position: fixed;
+  bottom: 230px;
   right: 28px;
   width: 280px;
 }
@@ -24,8 +24,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .form-popup {
   display: none;
   position: fixed;
-  bottom: 0;
-  right: 15px;
+  bottom: 230;
+  right: 28px;
   border: 3px solid #f1f1f1;
   z-index: 9;
 }
