--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
   cursor: pointer;
   opacity: 0.8;
   position: fixed;
-  bottom: 540px;
-  right: 920px;
+  bottom: 23px;
+  right: 28px;
   width: 280px;
 }
 
@@ -24,15 +24,15 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .form-popup {
   display: none;
   position: fixed;
-  bottom: 540px;
-  right: 920px;
+  bottom: 0;
+  right: 15px;
   border: 3px solid #f1f1f1;
   z-index: 9;
 }
 
 /* Add styles to the form container */
 .form-container {
-  max-width: 300px;
+  max-width: 500px;
   padding: 10px;
   background-color: white;
 }
@@ -83,7 +83,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 <div class="form-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
-    <h1>Hi 子炘， 我非常喜欢你，你愿意做我的女朋友吗</h1>
+    <h1>Hi 子炘，我非常喜欢你，你愿意做我的女朋友吗</h1>
     <button type="submit" class="btn">Yes</button>
   </form>
 </div>
