--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
+<img src="bloom-blossom-field-flora-wallpaper.jpg" alt="Trulli" width="500" height="333">  
+
+  
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
   background-color: #FF0000;
