--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 				<span class="comments">子炘：</span><br />
 				<span class="space"><span class="comments">我非常的激动</span></span><br />
 				<span class="space"/><span class="comments">也非常荣幸</span><br />
-				<span class="space"/><span class="comments">能成为你的男朋友。</span><br />
+				<span class="space"/><span class="comments">能成为你的男朋友</span><br />
 				<span class="space"/><span class="comments">这是我第一次拥有这个身份</span><br />
 				<span class="space"/><span class="comments">我没有任何经验</span><br />
 				<span class="space"/><span class="comments">但是我会好好努力</span><br />
 				<span class="space"/><span class="comments">成为一个优秀的男朋友</span><br />
 				<span class="space"/><span class="comments">也请你多多包涵 多多指教</span><br />
 				<span class="space"/><span class="comments"></span><br />
-				<span class="space"/><span class="comments">---天</span><br />
+				<span class="space"/><span class="comments">--- 天</span><br />
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
