--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 				<span class="space"/><span class="comments">我没有任何经验</span><br />
 				<span class="space"/><span class="comments">但是我会好好努力</span><br />
 				<span class="space"/><span class="comments">成为一个优秀的男朋友</span><br />
-				<span class="space"/><span class="comments">一生很短</span><br />
-				<span class="space"/><span class="comments">请你多多指教</span><br />
+				<span class="space"/><span class="comments">我也会好好珍惜我们在一起的每一刻</span><br />
 				<span class="space"/><span class="comments"></span><br />
 				<span class="space"/><span class="comments">--- 天</span><br />
 			</div>
