--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<script type="text/javascript" src="js/garden.js" tppabs="./js/garden.js"></script>
     <script type="text/javascript" src="js/functions.js" tppabs="./js/functions.js"></script>
 <body>
+	<img src="WeChat Image_20210214202837.jpg" alt="hi" class="inline"/>
+	
 	<div id="mainDiv">
 		<div id="content">
 <iframe width="48" height="27" src="https://www.youtube.com/embed/aXYtJB7Qslk?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
