--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script type="text/javascript" src="js/garden.js" tppabs="./js/garden.js"></script>
     <script type="text/javascript" src="js/functions.js" tppabs="./js/functions.js"></script>
 <body>
-	<img src="WeChat Image_20210214202837.jpg" alt="hi" class="inline"/>
+	<img src="WeChat Image_20210214202837.jpg" alt="2021 Valentine's Day" width="1920" height="1080"/>
 	
 	<div id="mainDiv">
 		<div id="content">
