--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
 	<script type="text/javascript" src="js/jquery.js" tppabs="./js/jquery.js"></script>
 	<script type="text/javascript" src="js/garden.js" tppabs="./js/garden.js"></script>
     <script type="text/javascript" src="js/functions.js" tppabs="./js/functions.js"></script>
+	
+	<style>
+img {
+  max-width: 100%;
+  height: auto;
+}
+</style>
+	
 <body>
-	<img src="WeChat Image_20210214202837.jpg" alt="2021 Valentine's Day" width="1920" height="1080"/>
+	
+	
+	<img src="WeChat Image_20210214202837.jpg" alt="2021 Valentine's Day" width="1000" height="500">
 	
 	<div id="mainDiv">
 		<div id="content">
